ftrace: bpf: Fix IPMODIFY + DIRECT in modify_ftrace_direct() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12569,6 +12569,7 @@
 	patches.kernel.org/6.12.62-017-serial-add-support-of-CPCI-cards.patch
 	patches.kernel.org/6.12.62-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBI.patch
 	patches.kernel.org/6.12.62-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBI.patch
+	patches.kernel.org/6.12.62-020-ftrace-bpf-Fix-IPMODIFY-DIRECT-in-modify_ftra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
