staging: rtl8723bs: fix out-of-bounds read in OnBeacon ESR IE parsing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12596,6 +12596,7 @@
 	patches.kernel.org/6.12.62-044-comedi-check-device-s-attached-status-in-comp.patch
 	patches.kernel.org/6.12.62-045-staging-rtl8723bs-fix-out-of-bounds-read-in-r.patch
 	patches.kernel.org/6.12.62-046-staging-rtl8723bs-fix-stack-buffer-overflow-i.patch
+	patches.kernel.org/6.12.62-047-staging-rtl8723bs-fix-out-of-bounds-read-in-O.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
