bus: mhi: host: pci_generic: Add Telit FN920C04 modem support (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12597,6 +12597,7 @@
 	patches.kernel.org/6.12.62-045-staging-rtl8723bs-fix-out-of-bounds-read-in-r.patch
 	patches.kernel.org/6.12.62-046-staging-rtl8723bs-fix-stack-buffer-overflow-i.patch
 	patches.kernel.org/6.12.62-047-staging-rtl8723bs-fix-out-of-bounds-read-in-O.patch
+	patches.kernel.org/6.12.62-048-bus-mhi-host-pci_generic-Add-Telit-FN920C04-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
