platform/x86: huawei-wmi: add keys for HONOR models (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12583,6 +12583,7 @@
 	patches.kernel.org/6.12.62-031-pinctrl-qcom-msm-Fix-deadlock-in-pinmux-confi.patch
 	patches.kernel.org/6.12.62-032-platform-x86-acer-wmi-Ignore-backlight-event.patch
 	patches.kernel.org/6.12.62-033-HID-apple-Add-SONiX-AK870-PRO-to-non_apple_ke.patch
+	patches.kernel.org/6.12.62-034-platform-x86-huawei-wmi-add-keys-for-HONOR-mo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
