--- a/series.conf
+++ b/series.conf
@@ -12551,6 +12551,7 @@
 	patches.kernel.org/6.12.61-131-spi-spi-nxp-fspi-Check-return-value-of-devm_m.patch
 	patches.kernel.org/6.12.61-132-Linux-6.12.61.patch
 	patches.kernel.org/6.12.62-001-xfrm-delete-x-tunnel-as-we-delete-x.patch
+	patches.kernel.org/6.12.62-002-Revert-xfrm-destroy-xfrm_state-synchronously-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
