platform/x86/amd/pmc: Add spurious_8042 to Xbox Ally (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12585,6 +12585,7 @@
 	patches.kernel.org/6.12.62-033-HID-apple-Add-SONiX-AK870-PRO-to-non_apple_ke.patch
 	patches.kernel.org/6.12.62-034-platform-x86-huawei-wmi-add-keys-for-HONOR-mo.patch
 	patches.kernel.org/6.12.62-035-platform-x86-amd-pmc-Add-Lenovo-Legion-Go-2-t.patch
+	patches.kernel.org/6.12.62-036-platform-x86-amd-pmc-Add-spurious_8042-to-Xbo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
