USB: serial: kobil_sct: fix TIOCMBIS and TIOCMBIC (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12568,6 +12568,7 @@
 	patches.kernel.org/6.12.62-016-USB-serial-ftdi_sio-match-on-interface-number.patch
 	patches.kernel.org/6.12.62-017-serial-add-support-of-CPCI-cards.patch
 	patches.kernel.org/6.12.62-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBI.patch
+	patches.kernel.org/6.12.62-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
