--- a/series.conf
+++ b/series.conf
@@ -12582,6 +12582,7 @@
 	patches.kernel.org/6.12.62-030-nvme-fix-admin-request_queue-lifetime.patch
 	patches.kernel.org/6.12.62-031-pinctrl-qcom-msm-Fix-deadlock-in-pinmux-confi.patch
 	patches.kernel.org/6.12.62-032-platform-x86-acer-wmi-Ignore-backlight-event.patch
+	patches.kernel.org/6.12.62-033-HID-apple-Add-SONiX-AK870-PRO-to-non_apple_ke.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
