--- a/series.conf
+++ b/series.conf
@@ -12599,6 +12599,7 @@
 	patches.kernel.org/6.12.62-047-staging-rtl8723bs-fix-out-of-bounds-read-in-O.patch
 	patches.kernel.org/6.12.62-048-bus-mhi-host-pci_generic-Add-Telit-FN920C04-m.patch
 	patches.kernel.org/6.12.62-049-bus-mhi-host-pci_generic-Add-Telit-FN990B40-m.patch
+	patches.kernel.org/6.12.62-050-Linux-6.12.62.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
