samples: work around glibc redefining some of our defines wrong (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12588,6 +12588,7 @@
 	patches.kernel.org/6.12.62-036-platform-x86-amd-pmc-Add-spurious_8042-to-Xbo.patch
 	patches.kernel.org/6.12.62-037-HID-elecom-Add-support-for-ELECOM-M-XT3URBK-0.patch
 	patches.kernel.org/6.12.62-038-LoongArch-Mask-all-interrupts-during-kexec-kd.patch
+	patches.kernel.org/6.12.62-039-samples-work-around-glibc-redefining-some-of-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
