--- a/series.conf
+++ b/series.conf
@@ -12584,6 +12584,7 @@
 	patches.kernel.org/6.12.62-032-platform-x86-acer-wmi-Ignore-backlight-event.patch
 	patches.kernel.org/6.12.62-033-HID-apple-Add-SONiX-AK870-PRO-to-non_apple_ke.patch
 	patches.kernel.org/6.12.62-034-platform-x86-huawei-wmi-add-keys-for-HONOR-mo.patch
+	patches.kernel.org/6.12.62-035-platform-x86-amd-pmc-Add-Lenovo-Legion-Go-2-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
