Documentation: process: Also mention Sasha Levin as stable tree maintainer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12554,6 +12554,7 @@
 	patches.kernel.org/6.12.62-002-Revert-xfrm-destroy-xfrm_state-synchronously-.patch
 	patches.kernel.org/6.12.62-003-xfrm-also-call-xfrm_state_delete_tunnel-at-de.patch
 	patches.kernel.org/6.12.62-004-xfrm-flush-all-states-in-xfrm_state_fini.patch
+	patches.kernel.org/6.12.62-005-Documentation-process-Also-mention-Sasha-Levi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
