locking/spinlock/debug: Fix data-race in do_raw_write_lock (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12558,6 +12558,7 @@
 	patches.kernel.org/6.12.62-006-jbd2-avoid-bug_on-in-jbd2_journal_get_create_.patch
 	patches.kernel.org/6.12.62-007-ext4-refresh-inline-data-size-before-write-op.patch
 	patches.kernel.org/6.12.62-008-ksmbd-ipc-fix-use-after-free-in-ipc_msg_send_.patch
+	patches.kernel.org/6.12.62-009-locking-spinlock-debug-Fix-data-race-in-do_ra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
