--- a/series.conf
+++ b/series.conf
@@ -12592,6 +12592,7 @@
 	patches.kernel.org/6.12.62-040-wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link.patch
 	patches.kernel.org/6.12.62-041-wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC.patch
 	patches.kernel.org/6.12.62-042-comedi-c6xdigio-Fix-invalid-PNP-driver-unregi.patch
+	patches.kernel.org/6.12.62-043-comedi-multiq3-sanitize-config-options-in-mul.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
