drm/amdkfd: Fix GPU mappings for APU after prefetch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12575,6 +12575,7 @@
 	patches.kernel.org/6.12.62-023-drm-vmwgfx-Use-kref-in-vmw_bo_dirty.patch
 	patches.kernel.org/6.12.62-024-Bluetooth-btrtl-Avoid-loading-the-config-file.patch
 	patches.kernel.org/6.12.62-025-smb-fix-invalid-username-check-in-smb3_fs_con.patch
+	patches.kernel.org/6.12.62-026-drm-amdkfd-Fix-GPU-mappings-for-APU-after-pre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
