nvme: fix admin request_queue lifetime (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12579,6 +12579,7 @@
 	patches.kernel.org/6.12.62-027-ALSA-usb-audio-Add-native-DSD-quirks-for-Pure.patch
 	patches.kernel.org/6.12.62-028-bfs-Reconstruct-file-type-when-loading-from-d.patch
 	patches.kernel.org/6.12.62-029-HID-hid-input-Extend-Elan-ignore-battery-quir.patch
+	patches.kernel.org/6.12.62-030-nvme-fix-admin-request_queue-lifetime.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
