--- a/series.conf
+++ b/series.conf
@@ -12571,6 +12571,7 @@
 	patches.kernel.org/6.12.62-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBI.patch
 	patches.kernel.org/6.12.62-020-ftrace-bpf-Fix-IPMODIFY-DIRECT-in-modify_ftra.patch
 	patches.kernel.org/6.12.62-021-spi-xilinx-increase-number-of-retries-before-.patch
+	patches.kernel.org/6.12.62-022-spi-imx-keep-dma-request-disabled-before-dma-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
