pinctrl: qcom: msm: Fix deadlock in pinmux configuration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12580,6 +12580,7 @@
 	patches.kernel.org/6.12.62-028-bfs-Reconstruct-file-type-when-loading-from-d.patch
 	patches.kernel.org/6.12.62-029-HID-hid-input-Extend-Elan-ignore-battery-quir.patch
 	patches.kernel.org/6.12.62-030-nvme-fix-admin-request_queue-lifetime.patch
+	patches.kernel.org/6.12.62-031-pinctrl-qcom-msm-Fix-deadlock-in-pinmux-confi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
