--- a/series.conf
+++ b/series.conf
@@ -34993,6 +34993,7 @@
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-gadget-f_hid-Fix-zero-length-packet-transfer.patch
 	patches.suse/usb-cdns3-gadget-Use-after-free-during-failed-initia.patch
+	patches.suse/usb-udc-Add-trace-event-for-usb_gadget_set_state.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
 	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
 	patches.suse/usb-gadget-f_fs-Fix-epfile-null-pointer-access-after.patch
