--- a/series.conf
+++ b/series.conf
@@ -34990,6 +34990,7 @@
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethernet.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
+	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-gadget-f_hid-Fix-zero-length-packet-transfer.patch
 	patches.suse/usb-cdns3-gadget-Use-after-free-during-failed-initia.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
