--- a/series.conf
+++ b/series.conf
@@ -35001,6 +35001,7 @@
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/thunderbolt-Use-is_pciehp-instead-of-is_hotplug_brid.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
+	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/char-misc-Make-misc_register-reentry-for-miscdevice-.patch
 	patches.suse/char-misc-Does-not-request-module-for-miscdevice-wit.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
