--- a/series.conf
+++ b/series.conf
@@ -35180,6 +35180,7 @@
 	patches.suse/firmware-arm_scmi-Fix-premature-SCMI_XFER_FLAG_IS_RA.patch
 	patches.suse/xhci-dbc-fix-bogus-1024-byte-prefix-if-ttyDBC-read-r.patch
 	patches.suse/xhci-dbc-enable-back-DbC-in-resume-if-it-was-enabled.patch
+	patches.suse/usb-raw-gadget-do-not-limit-transfer-length.patch
 	patches.suse/usb-core-quirks-Add-Huawei-ME906S-to-wakeup-quirk.patch
 	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
