--- a/series.conf
+++ b/series.conf
@@ -35186,6 +35186,7 @@
 	patches.suse/usb-core-quirks-Add-Huawei-ME906S-to-wakeup-quirk.patch
 	patches.suse/USB-serial-option-add-UNISOC-UIS7720.patch
 	patches.suse/USB-serial-option-add-Quectel-RG255C.patch
+	patches.suse/USB-serial-option-add-Telit-FN920C04-ECM-composition.patch
 	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
 	patches.suse/serial-8250_mtk-Enable-baud-clock-and-manage-in-runti.patch
