usb: chipidea: udc: limit usb request length to max 16KB (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29866,6 +29866,7 @@
 	patches.suse/apparmor-test-Fix-memory-leak-for-aa_unpack_strdup.patch
 	patches.suse/apparmor-fix-Do-simple-duplicate-message-elimination.patch
 	patches.suse/usb-chipidea-add-CI_HDRC_HAS_SHORT_PKT_LIMIT-flag.patch
+	patches.suse/usb-chipidea-udc-limit-usb-request-length-to-max-16K.patch
 	patches.suse/usb-chipidea-udc-handle-USB-Error-Interrupt-if-IOC-n.patch
 	patches.suse/usb-using-mutex-lock-and-supporting-O_NONBLOCK-flag-.patch
 	patches.suse/usb-yurex-make-waiting-on-yurex_write-interruptible.patch
