usb: dwc3: Abort suspend on soft disconnect failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33538,6 +33538,7 @@
 	patches.suse/Input-xpad-support-Acer-NGR-200-Controller.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
+	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
 	patches.suse/Logitech-C-270-even-more-broken.patch
 	patches.suse/usb-hub-fix-detection-of-high-tier-USB3-devices-behi.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
