usb: typec: ucsi: psy: Set max current to zero when disconnected (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35342,6 +35342,7 @@
 	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Nova-Lake-S.patch
 	patches.suse/usb-dwc3-pci-Sort-out-the-Intel-device-IDs.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
+	patches.suse/usb-typec-ucsi-psy-Set-max-current-to-zero-when-disc.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-u-blox-EVK-M101.patch
 	patches.suse/USB-serial-option-add-support-for-Rolling-RW101R-GL.patch
 	patches.suse/usb-storage-sddr55-Reject-out-of-bound-new_pba.patch
