--- a/series.conf
+++ b/series.conf
@@ -35496,6 +35496,7 @@
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
 	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 	patches.suse/usb-dwc2-fix-hang-during-suspend-if-set-as-periphera.patch
+	patches.suse/usb-raw-gadget-cap-raw_io-transfer-length-to-KMALLOC.patch
 	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
