--- a/series.conf
+++ b/series.conf
@@ -12877,6 +12877,7 @@
 	patches.suse/ipv4-start-using-dst_dev_rcu.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
 	patches.suse/smsc911x-add-second-read-of-EEPROM-mac-when-possible.patch
+	patches.suse/net-call-cond_resched-less-often-in-__release_sock.patch
 	patches.suse/net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
