x86/paravirt: Move halt paravirt calls under CONFIG_PARAVIRT (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50450,6 +50450,7 @@
 	patches.suse/net-mana-Switch-to-page-pool-for-jumbo-frames.patch
 	patches.suse/net-usb-usbnet-restore-usb-d-name-exception-for-loca.patch
 	patches.suse/mptcp-fix-NULL-pointer-in-can_accept_new_subflow.patch
+	patches.suse/x86-paravirt-Move-halt-paravirt-calls-under-CONFIG_PARAVIR.patch
 	patches.suse/x86-tdx-Fix-arch_safe_halt-execution-for-TDX-VMs.patch
 	patches.suse/net-fix-geneve_opt-length-integer-overflow.patch
 	patches.suse/netfilter-nft_tunnel-fix-geneve_opt-type-confusion-additio.patch
