--- a/series.conf
+++ b/series.conf
@@ -50452,6 +50452,7 @@
 	patches.suse/mptcp-fix-NULL-pointer-in-can_accept_new_subflow.patch
 	patches.suse/x86-paravirt-Move-halt-paravirt-calls-under-CONFIG_PARAVIR.patch
 	patches.suse/x86-tdx-Fix-arch_safe_halt-execution-for-TDX-VMs.patch
+	patches.suse/x86-tdx-Emit-warning-if-IRQs-are-enabled-during-HLT-VE-han.patch
 	patches.suse/net-fix-geneve_opt-length-integer-overflow.patch
 	patches.suse/netfilter-nft_tunnel-fix-geneve_opt-type-confusion-additio.patch
 	patches.suse/KVM-x86-Acquire-SRCU-in-KVM_GET_MP_STATE-to-protect-guest-.patch
