--- a/series.conf
+++ b/series.conf
@@ -22756,6 +22756,7 @@
 	patches.suse/selftests-net-convert-fib_nexthops.sh-to-run-it-in-unique-.patch
 	patches.suse/selftests-net-convert-fib-onlink-tests.sh-to-run-it-in-uni.patch
 	patches.suse/selftests-net-convert-fib_rule_tests.sh-to-run-it-in-uniqu.patch
+	patches.suse/selftests-net-convert-fib_tests.sh-to-run-it-in-unique-nam.patch
 	patches.suse/net-atlantic-eliminate-double-free-in-error-handling.patch
 	patches.suse/i40e-remove-fake-support-of-rx-frames-irq.patch
 	patches.suse/net-mlx5-Add-mlx5_ifc-bits-used-for-supporting-singl.patch
