--- a/series.conf
+++ b/series.conf
@@ -22747,6 +22747,7 @@
 	patches.suse/page_pool-fix-typos-and-punctuation.patch
 	patches.suse/selftests-net-add-variable-NS_LIST-for-lib.sh.patch
 	patches.suse/selftests-net-convert-srv6_end_dt46_l3vpn_test.sh-to-run-i.patch
+	patches.suse/selftests-net-convert-srv6_end_dt4_l3vpn_test.sh-to-run-it.patch
 	patches.suse/selftests-net-fix-grep-checking-for-fib_nexthop_mult.patch
 	patches.suse/net-atlantic-eliminate-double-free-in-error-handling.patch
 	patches.suse/i40e-remove-fake-support-of-rx-frames-irq.patch
