--- a/series.conf
+++ b/series.conf
@@ -22751,6 +22751,7 @@
 	patches.suse/selftests-net-convert-srv6_end_dt6_l3vpn_test.sh-to-run-it.patch
 	patches.suse/selftests-net-convert-fcnal-test.sh-to-run-it-in-unique-na.patch
 	patches.suse/selftests-net-fix-grep-checking-for-fib_nexthop_mult.patch
+	patches.suse/selftests-net-convert-fib_nexthop_multiprefix-to-run-it-in.patch
 	patches.suse/net-atlantic-eliminate-double-free-in-error-handling.patch
 	patches.suse/i40e-remove-fake-support-of-rx-frames-irq.patch
 	patches.suse/net-mlx5-Add-mlx5_ifc-bits-used-for-supporting-singl.patch
