selftests/net: convert fcnal-test.sh to run it in unique namespace (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -22749,6 +22749,7 @@
 	patches.suse/selftests-net-convert-srv6_end_dt46_l3vpn_test.sh-to-run-i.patch
 	patches.suse/selftests-net-convert-srv6_end_dt4_l3vpn_test.sh-to-run-it.patch
 	patches.suse/selftests-net-convert-srv6_end_dt6_l3vpn_test.sh-to-run-it.patch
+	patches.suse/selftests-net-convert-fcnal-test.sh-to-run-it-in-unique-na.patch
 	patches.suse/selftests-net-fix-grep-checking-for-fib_nexthop_mult.patch
 	patches.suse/net-atlantic-eliminate-double-free-in-error-handling.patch
 	patches.suse/i40e-remove-fake-support-of-rx-frames-irq.patch
