selftests: dsa: Replace test symlinks by wrapper script (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -29106,6 +29106,7 @@
 	patches.suse/selftests-Introduce-Makefile-variable-to-list-shared-bash-.patch
 	patches.suse/selftests-bonding-Add-net-forwarding-lib.sh-to-TEST_INCLUD.patch
 	patches.suse/selftests-team-Add-shared-library-scripts-to-TEST_INCLUDES.patch
+	patches.suse/selftests-dsa-Replace-test-symlinks-by-wrapper-script.patch
 	patches.suse/selftests-forwarding-Redefine-relative_path-variable.patch
 	patches.suse/selftests-forwarding-Remove-duplicated-lib.sh-content.patch
 	patches.suse/ethtool-replace-struct-ethtool_eee-with-a-new-struct.patch
