--- a/series.conf
+++ b/series.conf
@@ -29103,6 +29103,7 @@
 	patches.suse/ice-stop-destroying-and-reinitalizing-Tx-tracker-dur.patch
 	patches.suse/mlxsw-Use-refcount_t-for-reference-counting.patch
 	patches.suse/net-stmmac-dwmac-starfive-Add-support-for-JH7100-SoC.patch
+	patches.suse/selftests-Introduce-Makefile-variable-to-list-shared-bash-.patch
 	patches.suse/selftests-forwarding-Redefine-relative_path-variable.patch
 	patches.suse/selftests-forwarding-Remove-duplicated-lib.sh-content.patch
 	patches.suse/ethtool-replace-struct-ethtool_eee-with-a-new-struct.patch
