selftests: bonding: Add net/forwarding/lib.sh to TEST_INCLUDES (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -29104,6 +29104,7 @@
 	patches.suse/mlxsw-Use-refcount_t-for-reference-counting.patch
 	patches.suse/net-stmmac-dwmac-starfive-Add-support-for-JH7100-SoC.patch
 	patches.suse/selftests-Introduce-Makefile-variable-to-list-shared-bash-.patch
+	patches.suse/selftests-bonding-Add-net-forwarding-lib.sh-to-TEST_INCLUD.patch
 	patches.suse/selftests-forwarding-Redefine-relative_path-variable.patch
 	patches.suse/selftests-forwarding-Remove-duplicated-lib.sh-content.patch
 	patches.suse/ethtool-replace-struct-ethtool_eee-with-a-new-struct.patch
