netdevsim: print human readable IP address (bsc#1255071).

--- a/series.conf
+++ b/series.conf
@@ -49198,6 +49198,7 @@
 	patches.suse/tg3-Link-IRQs-to-NAPI-instances.patch
 	patches.suse/tg3-Link-queues-to-NAPIs.patch
 	patches.suse/tcp-move-sysctl_tcp_l3mdev_accept-to-netns_ipv4_read.patch
+	patches.suse/netdevsim-print-human-readable-IP-address.patch
 	patches.suse/netdevsim-copy-addresses-for-both-in-and-out-paths.patch
 	patches.suse/selftests-rtnetlink-update-netdevsim-ipsec-output-fo.patch
 	patches.suse/r8169-enable-SG-TSO-on-selected-chip-versions-per-de.patch
