selftests/net: calibrate txtimestamp (bsc#1255085).

--- a/series.conf
+++ b/series.conf
@@ -29115,6 +29115,7 @@
 	patches.suse/ethtool-add-suffix-_u32-to-legacy-bitmap-members-of-.patch
 	patches.suse/ethtool-add-linkmode-bitmap-support-to-struct-ethtoo.patch
 	patches.suse/net-phy-c45-change-genphy_c45_ethtool_-get-set-_eee-.patch
+	patches.suse/selftests-net-calibrate-txtimestamp.patch
 	patches.suse/dpll-move-xa_erase-call-in-to-match-dpll_pin_alloc-e.patch
 	patches.suse/net-phy-phy_device-Prevent-nullptr-exceptions-on-ISR.patch
 	patches.suse/af_unix-Replace-BUG_ON-with-WARN_ON_ONCE.patch
