selftests/net: synchronize udpgro tests' tx and rx connection (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -22422,6 +22422,7 @@
 	patches.suse/octeon_ep-remove-atomic-variable-usage-in-Tx-data-pa.patch
 	patches.suse/selftests-tc-testing-preload-all-modules-in-kselftes.patch
 	patches.suse/selftests-tc-testing-use-parallel-tdc-in-kselftests.patch
+	patches.suse/selftests-net-synchronize-udpgro-tests-tx-and-rx-connectio.patch
 	patches.suse/tcp-use-tp-total_rto-to-track-number-of-linear-timeo.patch
 	patches.suse/gve-add-gve_features_check.patch
 	patches.suse/net-ethtool-Refactor-identical-get_ts_info-implement.patch
