selftests: net: more strict check in net_helper (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -27932,6 +27932,7 @@
 	patches.suse/net-add-rcu-safety-to-rtnl_prop_list_size.patch
 	patches.suse/connector-cn_proc-revert-connector-Fix-proc_event_nu.patch
 	patches.suse/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
+	patches.suse/selftests-net-more-strict-check-in-net_helper.patch
 	patches.suse/octeontx2-af-Remove-the-PF_FUNC-validation-for-NPC-t.patch
 	patches.suse/i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-disabl.patch
 	patches.suse/i40e-Fix-wrong-mask-used-during-DCB-config.patch
