selftests: net: veth: test the ability to independently manipulate GRO and XDP (bsc#1255101).

--- a/series.conf
+++ b/series.conf
@@ -32811,6 +32811,7 @@
 	patches.suse/net-ethernet-mtk_eth_soc-fix-PPE-hanging-issue.patch
 	patches.suse/packet-annotate-data-races-around-ignore_outgoing.patch
 	patches.suse/net-veth-do-not-manipulate-GRO-when-using-XDP.patch
+	patches.suse/selftests-net-veth-test-the-ability-to-independently-manip.patch
 	patches.suse/net-dsa-mt7530-prevent-possible-incorrect-XTAL-frequ.patch
 	patches.suse/net-move-dev-state-into-net_device_read_txrx-group.patch
 	patches.suse/wireguard-receive-annotate-data-race-around-receivin.patch
