tick/sched: Limit non-timekeeper CPUs calling jiffies update (bsc#1254477).

--- a/series.conf
+++ b/series.conf
@@ -13704,6 +13704,7 @@
 	patches.suse/sched-fair-Small-cleanup-to-sched_balance_newidle.patch
 	patches.suse/sched-fair-Small-cleanup-to-update_newidle_cost.patch
 	patches.suse/sched-fair-Proportional-newidle-balance.patch
+	patches.suse/tick-sched-Limit-non-timekeeper-CPUs-calling-jiffies.patch
 	patches.suse/efi-libstub-Fix-page-table-access-in-5-level-to-4-le.patch
 	patches.suse/ACPI-processor_core-fix-map_x2apic_id-for-amd-pstate.patch
 	patches.suse/ACPI-property-Fix-fwnode-refcount-leak-in-acpi_fwnod.patch
