btrfs: handle aligned EOF truncation correctly for subpage cases (bsc#1253238).

--- a/series.conf
+++ b/series.conf
@@ -9353,6 +9353,7 @@
 	patches.suse/btrfs-use-unsigned-types-for-constants-defined-as-bi.patch
 	patches.suse/btrfs-exit-after-state-split-error-at-set_extent_bit.patch
 	patches.suse/btrfs-handle-unaligned-EOF-truncation-correctly-for-.patch
+	patches.suse/btrfs-handle-aligned-EOF-truncation-correctly-for-su.patch
 	patches.suse/btrfs-fix-qgroup-reservation-leak-on-failure-to-allo.patch
 	patches.suse/btrfs-fix-invalid-data-space-release-when-truncating.patch
 	patches.suse/btrfs-fix-wrong-start-offset-for-delalloc-space-rele.patch
