- selftests: net: included needed helper in the install targets   (bsc#1254235). - Refresh   patches.suse/selftests-net-List-helper-scripts-in-TEST_FILES-Makefile-v.patch. - Refresh patches.suse/selftests-net-include-forwarding-lib.patch.

--- a/series.conf
+++ b/series.conf
@@ -27494,6 +27494,7 @@
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
 	patches.suse/exfat-fix-zero-the-unwritten-part-for-dio-read.patch
 	patches.suse/selftests-net-remove-dependency-on-ebpf-tests.patch
+	patches.suse/selftests-net-included-needed-helper-in-the-install-target.patch
 	patches.suse/selftests-net-explicitly-wait-for-listener-ready.patch
 	patches.suse/selftests-net-lib-update-busywait-timeout-value.patch
 	patches.suse/gve-Fix-skb-truesize-underestimation.patch
