--- a/series.conf
+++ b/series.conf
@@ -9866,6 +9866,7 @@
 	patches.suse/netfilter-nft_set_pipapo-prevent-overflow-in-lookup-.patch
 	patches.suse/netfilter-nft_set_pipapo-clamp-maximum-map-bucket-size-to-.patch
 	patches.suse/devlink-define-enum-for-attr-types-of-dynamic-attrib.patch
+	patches.suse/devlink-avoid-param-type-value-translations.patch
 	patches.suse/wifi-iwlwifi-Add-missing-MODULE_FIRMWARE-for-Qu-c0-j.patch
 	patches.suse/Revert-mac80211-Dynamically-set-CoDel-parameters-per.patch
 	patches.suse/wifi-mac80211-Add-link-iteration-macro-for-link-data.patch
