--- a/series.conf
+++ b/series.conf
@@ -27524,6 +27524,7 @@
 	patches.suse/net-sysfs-Fix-sys-class-net-iface-path.patch
 	patches.suse/xen-netback-properly-sync-TX-responses.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
+	patches.suse/selftests-net-Remove-executable-bits-from-library-scripts.patch
 	patches.suse/selftests-net-List-helper-scripts-in-TEST_FILES-Makefile-v.patch
 	patches.suse/mptcp-fix-data-re-injection-from-stale-subflow.patch
 	patches.suse/idpf-avoid-compiler-padding-in-virtchnl2_ptype-struc.patch
