xfs: Replace strncpy with memcpy (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12533,6 +12533,7 @@
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
+	patches.suse/xfs-Replace-strncpy-with-memcpy.patch
 	patches.suse/xfs-rename-the-old_crc-variable-in-xlog_recover_process.patch
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/PCI-Test-for-bit-underflow-in-pcie_set_readrq.patch
