bpf: Reject bpf_timer for PREEMPT_RT (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12372,6 +12372,7 @@
 	patches.suse/bpf-Check-the-helper-function-is-valid-in-get_helper.patch
 	patches.suse/bpf-Fix-out-of-bounds-dynptr-write-in-bpf_crypto_cry.patch
 	patches.suse/tcp_bpf-Call-sk_msg_free-when-tcp_bpf_send_verdict-f.patch
+	patches.suse/bpf-Reject-bpf_timer-for-PREEMPT_RT.patch
 	patches.suse/btrfs-fix-squota-compressed-stats-leak.patch
 	patches.suse/btrfs-fix-corruption-reading-compressed-range-when-b.patch
 	patches.suse/btrfs-fix-subvolume-deletion-lockup-caused-by-inodes.patch
