drm/{i915,xe}/fbdev: add intel_fbdev_fb_pitch_align() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -696,6 +696,7 @@
 	########################################################
 	# sorted patches
 	########################################################
+	patches.suse/drm-i915-xe-fbdev-add-intel_fbdev_fb_pitch_align.patch
 	########################################################
 	# end of sorted patches
 	########################################################
