netdevsim: print human readable IP address (bsc#1255071).

--- a/series.conf
+++ b/series.conf
@@ -812,6 +812,7 @@
 	patches.suse/r8169-remove-original-workaround-for-RTL8125-broken-.patch
 	patches.suse/tg3-Link-IRQs-to-NAPI-instances.patch
 	patches.suse/tg3-Link-queues-to-NAPIs.patch
+	patches.suse/netdevsim-print-human-readable-IP-address.patch
 	patches.suse/netdevsim-copy-addresses-for-both-in-and-out-paths.patch
 	patches.suse/selftests-rtnetlink-update-netdevsim-ipsec-output-fo.patch
 	patches.suse/r8169-enable-SG-TSO-on-selected-chip-versions-per-de.patch
