--- a/series.conf
+++ b/series.conf
@@ -9213,6 +9213,7 @@
 	patches.suse/tools-ynl-gen-use-temporary-file-for-rendering.patch
 	patches.suse/net-lan966x-Fix-return-value-check-for-vcap_get_rule.patch
 	patches.suse/net-dsa-realtek-add-phylink_get_caps-implementation.patch
+	patches.suse/selftests-vrf_route_leaking-remove-ipv6_ping_frag-from-def.patch
 	patches.suse/ipv6-do-not-match-device-when-remove-source-route.patch
 	patches.suse/net-annotate-data-races-around-sk-sk_lingertime.patch
 	patches.suse/net-pcs-lynxi-implement-pcs_disable-op.patch
