selftests/net: convert test_vxlan_vnifiltering.sh to run it in unique namespace (bsc#1255349).

--- a/series.conf
+++ b/series.conf
@@ -22688,6 +22688,7 @@
 	patches.suse/ethtool-Implement-ethtool_puts.patch
 	patches.suse/net-Convert-some-ethtool_sprintf-to-ethtool_puts.patch
 	patches.suse/selftests-net-convert-test_bridge_neigh_suppress.sh-.patch
+	patches.suse/selftests-net-convert-test_vxlan_vnifiltering.sh-to-run-it.patch
 	patches.suse/selftests-net-convert-vrf_route_leaking.sh-to-run-it-in-un.patch
 	patches.suse/net-dsa-microchip-use-DSA_TAG_PROTO-without-_VALUE-d.patch
 	patches.suse/netlink-Return-unsigned-value-for-nla_len.patch
