--- a/series.conf
+++ b/series.conf
@@ -55140,6 +55140,7 @@
 	patches.suse/net-mana-Allocate-MSI-X-vectors-dynamically.patch
 	patches.suse/net-ipv4-ipmr-ipmr_queue_xmit-Drop-local-variable-de.patch
 	patches.suse/selftests-net-use-slowwait-to-stabilize-vrf_route_leaking-.patch
+	patches.suse/selftests-net-use-slowwait-to-make-sure-IPv6-setup-finishe.patch
 	patches.suse/net-mana-Set-tx_packets-to-post-gso-processing-packe.patch
 	patches.suse/wifi-iwlegacy-Check-rate_idx-range-after-addition.patch
 	patches.suse/wifi-mac80211-update-radar_required-in-channel-conte.patch
