--- a/series.conf
+++ b/series.conf
@@ -12778,6 +12778,7 @@
 	patches.kernel.org/6.12.63-176-fs-ntfs3-out1-also-needs-to-put-mi.patch
 	patches.kernel.org/6.12.63-177-fs-ntfs3-Prevent-memory-leaks-in-add-sub-reco.patch
 	patches.kernel.org/6.12.63-178-drm-mediatek-Fix-CCORR-mtk_ctm_s31_32_to_s1_n.patch
+	patches.kernel.org/6.12.63-179-drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
