--- a/series.conf
+++ b/series.conf
@@ -12798,6 +12798,7 @@
 	patches.kernel.org/6.12.63-196-net-phy-adin1100-Fix-software-power-down-read.patch
 	patches.kernel.org/6.12.63-197-cpuset-Treat-cpusets-in-attaching-as-populate.patch
 	patches.kernel.org/6.12.63-198-wifi-rtl818x-rtl8187-Fix-potential-buffer-und.patch
+	patches.kernel.org/6.12.63-199-RAS-Report-all-ARM-processor-CPER-information.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
