--- a/series.conf
+++ b/series.conf
@@ -12672,6 +12672,7 @@
 	patches.kernel.org/6.12.63-070-arm64-dts-ti-k3-am62p-Fix-memory-ranges-for-G.patch
 	patches.kernel.org/6.12.63-071-firmware-imx-scu-irq-fix-OF-node-leak-in.patch
 	patches.kernel.org/6.12.63-072-arm64-dts-qcom-x1e80100-Fix-compile-warnings-.patch
+	patches.kernel.org/6.12.63-073-arm64-dts-qcom-x1e80100-Add-missing-quirk-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
