wifi: ath12k: fix potential memory leak in ath12k_wow_arp_ns_offload() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12695,6 +12695,7 @@
 	patches.kernel.org/6.12.63-093-pinctrl-stm32-fix-hwspinlock-resource-leak-in.patch
 	patches.kernel.org/6.12.63-094-i3c-fix-refcount-inconsistency-in-i3c_master_.patch
 	patches.kernel.org/6.12.63-095-i3c-master-svc-Prevent-incomplete-IBI-transac.patch
+	patches.kernel.org/6.12.63-096-wifi-ath12k-fix-potential-memory-leak-in-ath1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
