resource: replace open coded resource_intersection() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12859,6 +12859,7 @@
 	patches.kernel.org/6.12.63-257-ARM-dts-samsung-exynos4210-trats-turn-off-SDI.patch
 	patches.kernel.org/6.12.63-258-ARM-dts-samsung-exynos4412-midas-turn-off-SDI.patch
 	patches.kernel.org/6.12.63-259-regulator-core-Protect-regulator_supply_alias.patch
+	patches.kernel.org/6.12.63-260-resource-replace-open-coded-resource_intersec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
