--- a/series.conf
+++ b/series.conf
@@ -12620,6 +12620,7 @@
 	patches.kernel.org/6.12.63-018-clk-renesas-Use-str_on_off-helper.patch
 	patches.kernel.org/6.12.63-019-clk-renesas-Pass-sub-struct-of-cpg_mssr_priv-.patch
 	patches.kernel.org/6.12.63-020-clk-renesas-cpg-mssr-Read-back-reset-register.patch
+	patches.kernel.org/6.12.63-021-drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
