--- a/series.conf
+++ b/series.conf
@@ -12880,6 +12880,7 @@
 	patches.kernel.org/6.12.63-278-net-hsr-remove-synchronize_rcu-from-hsr_add_p.patch
 	patches.kernel.org/6.12.63-279-net-hsr-Create-and-export-hsr_get_port_ndev.patch
 	patches.kernel.org/6.12.63-280-net-hsr-create-an-API-to-get-hsr-port-type.patch
+	patches.kernel.org/6.12.63-281-net-dsa-xrs700x-reject-unsupported-HSR-config.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
