net: stmmac: fix rx limit check in stmmac_rx_zc() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12865,6 +12865,7 @@
 	patches.kernel.org/6.12.63-263-netfilter-flowtable-check-for-maximum-number-.patch
 	patches.kernel.org/6.12.63-264-netfilter-nf_conncount-rework-API-to-use-sk_b.patch
 	patches.kernel.org/6.12.63-265-netfilter-nft_connlimit-update-the-count-if-a.patch
+	patches.kernel.org/6.12.63-266-net-stmmac-fix-rx-limit-check-in-stmmac_rx_zc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
