--- a/series.conf
+++ b/series.conf
@@ -12928,6 +12928,7 @@
 	patches.kernel.org/6.12.63-326-cifs-Fix-handling-of-a-beyond-EOF-DIO-unbuffe.patch
 	patches.kernel.org/6.12.63-327-docs-hwmon-fix-link-to-g762-devicetree-bindin.patch
 	patches.kernel.org/6.12.63-328-dma-pool-eliminate-alloc_pages-warning-in-ato.patch
+	patches.kernel.org/6.12.63-329-ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
