ntfs3: Fix uninit buffer allocated by __getname() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12638,6 +12638,7 @@
 	patches.kernel.org/6.12.63-036-irqchip-qcom-irq-combiner-Fix-section-mismatc.patch
 	patches.kernel.org/6.12.63-037-crypto-authenc-Correctly-pass-EINPROGRESS-bac.patch
 	patches.kernel.org/6.12.63-038-ntfs3-fix-uninit-memory-after-failed-mi_read-.patch
+	patches.kernel.org/6.12.63-039-ntfs3-Fix-uninit-buffer-allocated-by-__getnam.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
