backlight: lp855x: Fix lp855x.h kernel-doc warnings (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12826,6 +12826,7 @@
 	patches.kernel.org/6.12.63-224-iomap-always-run-error-completions-in-user-co.patch
 	patches.kernel.org/6.12.63-225-wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.kernel.org/6.12.63-226-backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
+	patches.kernel.org/6.12.63-227-backlight-lp855x-Fix-lp855x.h-kernel-doc-warn.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
