crypto: authenc - Correctly pass EINPROGRESS back up to the caller (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12636,6 +12636,7 @@
 	patches.kernel.org/6.12.63-034-irqchip-renesas-rzg2l-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-035-irqchip-starfive-jh8100-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-036-irqchip-qcom-irq-combiner-Fix-section-mismatc.patch
+	patches.kernel.org/6.12.63-037-crypto-authenc-Correctly-pass-EINPROGRESS-bac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
