--- a/series.conf
+++ b/series.conf
@@ -12730,6 +12730,7 @@
 	patches.kernel.org/6.12.63-128-regulator-core-disable-supply-if-enabling-mai.patch
 	patches.kernel.org/6.12.63-129-md-fix-rcu-protection-in-md_wakeup_thread.patch
 	patches.kernel.org/6.12.63-130-nbd-defer-config-put-in-recv_work.patch
+	patches.kernel.org/6.12.63-131-scsi-stex-Fix-reboot_notifier-leak-in-probe-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
