--- a/series.conf
+++ b/series.conf
@@ -12667,6 +12667,7 @@
 	patches.kernel.org/6.12.63-065-crypto-hisilicon-qm-restore-original-qos-valu.patch
 	patches.kernel.org/6.12.63-066-wifi-ath11k-fix-VHT-MCS-assignment.patch
 	patches.kernel.org/6.12.63-067-wifi-ath11k-fix-peer-HE-MCS-assignment.patch
+	patches.kernel.org/6.12.63-068-s390-smp-Fix-fallback-CPU-detection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
