--- a/series.conf
+++ b/series.conf
@@ -12600,6 +12600,7 @@
 	patches.kernel.org/6.12.62-048-bus-mhi-host-pci_generic-Add-Telit-FN920C04-m.patch
 	patches.kernel.org/6.12.62-049-bus-mhi-host-pci_generic-Add-Telit-FN990B40-m.patch
 	patches.kernel.org/6.12.62-050-Linux-6.12.62.patch
+	patches.kernel.org/6.12.63-001-smack-deduplicate-does-access-rule-request-tr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
