--- a/series.conf
+++ b/series.conf
@@ -12654,6 +12654,7 @@
 	patches.kernel.org/6.12.63-052-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
 	patches.kernel.org/6.12.63-053-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
 	patches.kernel.org/6.12.63-054-perf-annotate-Check-return-value-of-evsel__ge.patch
+	patches.kernel.org/6.12.63-055-arm64-dts-exynos-gs101-fix-sysreg_apm-reg-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
