iommu/arm-smmu-qcom: Enable use of all SMR groups when running bare-metal (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12827,6 +12827,7 @@
 	patches.kernel.org/6.12.63-225-wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.kernel.org/6.12.63-226-backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 	patches.kernel.org/6.12.63-227-backlight-lp855x-Fix-lp855x.h-kernel-doc-warn.patch
+	patches.kernel.org/6.12.63-228-iommu-arm-smmu-qcom-Enable-use-of-all-SMR-gro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
