--- a/series.conf
+++ b/series.conf
@@ -12725,6 +12725,7 @@
 	patches.kernel.org/6.12.63-123-efi-libstub-Fix-page-table-access-in-5-level-.patch
 	patches.kernel.org/6.12.63-124-locktorture-Fix-memory-leak-in-param_set_cpum.patch
 	patches.kernel.org/6.12.63-125-mfd-da9055-Fix-missing-regmap_del_irq_chip-in.patch
+	patches.kernel.org/6.12.63-126-ext4-correct-the-checking-of-quota-files-befo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
