virtio: fix virtqueue_set_affinity() docs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12848,6 +12848,7 @@
 	patches.kernel.org/6.12.63-246-virtio-fix-typo-in-virtio_device_ready-commen.patch
 	patches.kernel.org/6.12.63-247-virtio-fix-whitespace-in-virtio_config_ops.patch
 	patches.kernel.org/6.12.63-248-virtio-fix-grammar-in-virtio_queue_info-docs.patch
+	patches.kernel.org/6.12.63-249-virtio-fix-virtqueue_set_affinity-docs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
