--- a/series.conf
+++ b/series.conf
@@ -12947,6 +12947,7 @@
 	patches.kernel.org/6.12.63-345-net-lan743x-Allocate-rings-outside-ZONE_DMA.patch
 	patches.kernel.org/6.12.63-346-net-dst-introduce-dst-dev_rcu.patch
 	patches.kernel.org/6.12.63-347-tcp_metrics-use-dst_dev_net_rcu.patch
+	patches.kernel.org/6.12.63-348-usb-gadget-tegra-xudc-Always-reinitialize-dat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
