--- a/series.conf
+++ b/series.conf
@@ -12791,6 +12791,7 @@
 	patches.kernel.org/6.12.63-189-mfd-mt6397-irq-Fix-missing-irq_domain_remove-.patch
 	patches.kernel.org/6.12.63-190-mfd-mt6358-irq-Fix-missing-irq_domain_remove-.patch
 	patches.kernel.org/6.12.63-191-leds-rgb-leds-qcom-lpg-Don-t-enable-TRILED-wh.patch
+	patches.kernel.org/6.12.63-192-phy-renesas-rcar-gen3-usb2-Fix-an-error-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
