power: supply: rt5033_charger: Fix device node reference leaks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12702,6 +12702,7 @@
 	patches.kernel.org/6.12.63-100-drm-imagination-Fix-reference-to-devm_platfor.patch
 	patches.kernel.org/6.12.63-101-perf-lock-contention-Load-kernel-map-before-l.patch
 	patches.kernel.org/6.12.63-102-perf-record-skip-synthesize-event-when-open-e.patch
+	patches.kernel.org/6.12.63-103-power-supply-rt5033_charger-Fix-device-node-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
