drm/amdkfd: Use huge page size to check split svm range alignment (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12929,6 +12929,7 @@
 	patches.kernel.org/6.12.63-327-docs-hwmon-fix-link-to-g762-devicetree-bindin.patch
 	patches.kernel.org/6.12.63-328-dma-pool-eliminate-alloc_pages-warning-in-ato.patch
 	patches.kernel.org/6.12.63-329-ALSA-uapi-Fix-typo-in-asound.h-comment.patch
+	patches.kernel.org/6.12.63-330-drm-amdkfd-Use-huge-page-size-to-check-split-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
