--- a/series.conf
+++ b/series.conf
@@ -12684,6 +12684,7 @@
 	patches.kernel.org/6.12.63-082-Revert-mtd-rawnand-marvell-fix-layouts.patch
 	patches.kernel.org/6.12.63-083-mtd-nand-relax-ECC-parameter-validation-check.patch
 	patches.kernel.org/6.12.63-084-mtd-rawnand-lpc32xx_slc-fix-GPIO-descriptor-l.patch
+	patches.kernel.org/6.12.63-085-perf-Remove-get_perf_callchain-init_nr-argume.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
