--- a/series.conf
+++ b/series.conf
@@ -12842,6 +12842,7 @@
 	patches.kernel.org/6.12.63-240-hwmon-sy7636a-Fix-regulator_enable-resource-l.patch
 	patches.kernel.org/6.12.63-241-ACPI-processor_core-fix-map_x2apic_id-for-amd.patch
 	patches.kernel.org/6.12.63-242-ublk-prevent-invalid-access-with-DEBUG.patch
+	patches.kernel.org/6.12.63-243-ext4-improve-integrity-checking-in-__mb_check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
