--- a/series.conf
+++ b/series.conf
@@ -12632,6 +12632,7 @@
 	patches.kernel.org/6.12.63-030-irqchip-irq-bcm7038-l1-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-031-irqchip-irq-bcm7120-l2-Fix-section-mismatch.patch
 	patches.kernel.org/6.12.63-032-irqchip-irq-brcmstb-l2-Fix-section-mismatch.patch
+	patches.kernel.org/6.12.63-033-irqchip-imx-mu-msi-Fix-section-mismatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
