mfd: da9055: Fix missing regmap_del_irq_chip() in error path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12724,6 +12724,7 @@
 	patches.kernel.org/6.12.63-122-x86-boot-Fix-page-table-access-in-5-level-to-.patch
 	patches.kernel.org/6.12.63-123-efi-libstub-Fix-page-table-access-in-5-level-.patch
 	patches.kernel.org/6.12.63-124-locktorture-Fix-memory-leak-in-param_set_cpum.patch
+	patches.kernel.org/6.12.63-125-mfd-da9055-Fix-missing-regmap_del_irq_chip-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
