regulator: core: Protect regulator_supply_alias_list with regulator_list_mutex (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12858,6 +12858,7 @@
 	patches.kernel.org/6.12.63-256-ARM-dts-samsung-exynos4210-i9100-turn-off-SDI.patch
 	patches.kernel.org/6.12.63-257-ARM-dts-samsung-exynos4210-trats-turn-off-SDI.patch
 	patches.kernel.org/6.12.63-258-ARM-dts-samsung-exynos4412-midas-turn-off-SDI.patch
+	patches.kernel.org/6.12.63-259-regulator-core-Protect-regulator_supply_alias.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
