ARM: dts: samsung: exynos4210-i9100: turn off SDIO WLAN chip during system suspend (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12855,6 +12855,7 @@
 	patches.kernel.org/6.12.63-253-ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 	patches.kernel.org/6.12.63-254-spi-airoha-snfi-en7523-workaround-flash-damag.patch
 	patches.kernel.org/6.12.63-255-ARM-dts-samsung-universal_c210-turn-off-SDIO-.patch
+	patches.kernel.org/6.12.63-256-ARM-dts-samsung-exynos4210-i9100-turn-off-SDI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
