arm64: dts: imx8mp-venice-gw702x: remove off-board sdhc1 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12652,6 +12652,7 @@
 	patches.kernel.org/6.12.63-050-arm64-dts-freescale-imx8mp-venice-gw7905-2x-r.patch
 	patches.kernel.org/6.12.63-051-arm64-dts-imx8mm-venice-gw72xx-remove-unused-.patch
 	patches.kernel.org/6.12.63-052-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
+	patches.kernel.org/6.12.63-053-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
