crypto: hisilicon/qm - restore original qos values (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12664,6 +12664,7 @@
 	patches.kernel.org/6.12.63-062-soc-Switch-back-to-struct-platform_driver-rem.patch
 	patches.kernel.org/6.12.63-063-soc-qcom-gsbi-fix-double-disable-caused-by-de.patch
 	patches.kernel.org/6.12.63-064-crypto-asymmetric_keys-prevent-overflow-in-as.patch
+	patches.kernel.org/6.12.63-065-crypto-hisilicon-qm-restore-original-qos-valu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
