smack: fix bug: SMACK64TRANSMUTE set on non-directory (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12601,6 +12601,7 @@
 	patches.kernel.org/6.12.62-049-bus-mhi-host-pci_generic-Add-Telit-FN990B40-m.patch
 	patches.kernel.org/6.12.62-050-Linux-6.12.62.patch
 	patches.kernel.org/6.12.63-001-smack-deduplicate-does-access-rule-request-tr.patch
+	patches.kernel.org/6.12.63-002-smack-fix-bug-SMACK64TRANSMUTE-set-on-non-dir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
