--- a/series.conf
+++ b/series.conf
@@ -12715,6 +12715,7 @@
 	patches.kernel.org/6.12.63-113-drm-panthor-Fix-group_free_queue-for-partiall.patch
 	patches.kernel.org/6.12.63-114-drm-panthor-Fix-UAF-race-between-device-unplu.patch
 	patches.kernel.org/6.12.63-115-drm-panthor-Fix-race-with-suspend-during-unpl.patch
+	patches.kernel.org/6.12.63-116-drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
