--- a/series.conf
+++ b/series.conf
@@ -12779,6 +12779,7 @@
 	patches.kernel.org/6.12.63-177-fs-ntfs3-Prevent-memory-leaks-in-add-sub-reco.patch
 	patches.kernel.org/6.12.63-178-drm-mediatek-Fix-CCORR-mtk_ctm_s31_32_to_s1_n.patch
 	patches.kernel.org/6.12.63-179-drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
+	patches.kernel.org/6.12.63-180-drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
