--- a/series.conf
+++ b/series.conf
@@ -12771,6 +12771,7 @@
 	patches.kernel.org/6.12.63-169-NFSD-blocklayout-Fix-minlength-check-in-proc_.patch
 	patches.kernel.org/6.12.63-170-block-blk-throttle-Fix-throttle-slice-time-fo.patch
 	patches.kernel.org/6.12.63-171-drm-msm-a2xx-stop-over-complaining-about-the-.patch
+	patches.kernel.org/6.12.63-172-wifi-rtl818x-Fix-potential-memory-leaks-in-rt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
