net: lan743x: Allocate rings outside ZONE_DMA (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12944,6 +12944,7 @@
 	patches.kernel.org/6.12.63-342-irqchip-mchp-eic-Fix-error-code-in-mchp_eic_d.patch
 	patches.kernel.org/6.12.63-343-ocfs2-fix-memory-leak-in-ocfs2_merge_rec_left.patch
 	patches.kernel.org/6.12.63-344-LoongArch-Add-machine_kexec_mask_interrupts-i.patch
+	patches.kernel.org/6.12.63-345-net-lan743x-Allocate-rings-outside-ZONE_DMA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
