dt-bindings: clock: qcom,x1e80100-gcc: Add missing video resets (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12639,6 +12639,7 @@
 	patches.kernel.org/6.12.63-037-crypto-authenc-Correctly-pass-EINPROGRESS-bac.patch
 	patches.kernel.org/6.12.63-038-ntfs3-fix-uninit-memory-after-failed-mi_read-.patch
 	patches.kernel.org/6.12.63-039-ntfs3-Fix-uninit-buffer-allocated-by-__getnam.patch
+	patches.kernel.org/6.12.63-040-dt-bindings-clock-qcom-x1e80100-gcc-Add-missi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
