perf tools: Mark split kallsyms DSOs as loaded (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12882,6 +12882,7 @@
 	patches.kernel.org/6.12.63-280-net-hsr-create-an-API-to-get-hsr-port-type.patch
 	patches.kernel.org/6.12.63-281-net-dsa-xrs700x-reject-unsupported-HSR-config.patch
 	patches.kernel.org/6.12.63-282-net-sched-sch_cake-Fix-incorrect-qlen-reducti.patch
+	patches.kernel.org/6.12.63-283-perf-tools-Mark-split-kallsyms-DSOs-as-loaded.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
