--- a/series.conf
+++ b/series.conf
@@ -12806,6 +12806,7 @@
 	patches.kernel.org/6.12.63-204-usb-dwc2-fix-hang-during-suspend-if-set-as-pe.patch
 	patches.kernel.org/6.12.63-205-usb-raw-gadget-cap-raw_io-transfer-length-to-.patch
 	patches.kernel.org/6.12.63-206-selftests-bpf-skip-test_perf_branches_hw-on-u.patch
+	patches.kernel.org/6.12.63-207-selftests-bpf-Improve-reliability-of-test_per.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
