--- a/series.conf
+++ b/series.conf
@@ -12792,6 +12792,7 @@
 	patches.kernel.org/6.12.63-190-mfd-mt6358-irq-Fix-missing-irq_domain_remove-.patch
 	patches.kernel.org/6.12.63-191-leds-rgb-leds-qcom-lpg-Don-t-enable-TRILED-wh.patch
 	patches.kernel.org/6.12.63-192-phy-renesas-rcar-gen3-usb2-Fix-an-error-handl.patch
+	patches.kernel.org/6.12.63-193-phy-freescale-Initialize-priv-lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
