--- a/series.conf
+++ b/series.conf
@@ -12852,6 +12852,7 @@
 	patches.kernel.org/6.12.63-250-vdpa-mlx5-Fix-incorrect-error-code-reporting-.patch
 	patches.kernel.org/6.12.63-251-vhost-Fix-kthread-worker-cgroup-failure-handl.patch
 	patches.kernel.org/6.12.63-252-vdpa-pds-use-pe-for-ERR_PTR-in-event-handler-.patch
+	patches.kernel.org/6.12.63-253-ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
