--- a/series.conf
+++ b/series.conf
@@ -12765,6 +12765,7 @@
 	patches.kernel.org/6.12.63-163-bpf-Handle-return-value-of-ftrace_set_filter_.patch
 	patches.kernel.org/6.12.63-164-selftests-bpf-Fix-failure-paths-in-send_signa.patch
 	patches.kernel.org/6.12.63-165-bpf-Check-skb-transport_header-is-set-in-bpf_.patch
+	patches.kernel.org/6.12.63-166-watchdog-wdat_wdt-Fix-ACPI-table-leak-in-prob.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
