iomap: always run error completions in user context (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12823,6 +12823,7 @@
 	patches.kernel.org/6.12.63-221-drm-nouveau-restrict-the-flush-page-to-a-32-b.patch
 	patches.kernel.org/6.12.63-222-um-Don-t-rename-vmap-to-kernel_vmap.patch
 	patches.kernel.org/6.12.63-223-iomap-factor-out-a-iomap_dio_done-helper.patch
+	patches.kernel.org/6.12.63-224-iomap-always-run-error-completions-in-user-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
