platform/x86: asus-wmi: use brightness_set_blocking() for kbd led (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12913,6 +12913,7 @@
 	patches.kernel.org/6.12.63-311-Expand-the-type-of-nfs_fattr-valid.patch
 	patches.kernel.org/6.12.63-312-NFS-Fix-inheritance-of-the-block-sizes-when-a.patch
 	patches.kernel.org/6.12.63-313-fs-nls-Fix-inconsistency-between-utf8_to_utf3.patch
+	patches.kernel.org/6.12.63-314-platform-x86-asus-wmi-use-brightness_set_bloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
