perf hist: In init, ensure mem_info is put on error paths (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12884,6 +12884,7 @@
 	patches.kernel.org/6.12.63-282-net-sched-sch_cake-Fix-incorrect-qlen-reducti.patch
 	patches.kernel.org/6.12.63-283-perf-tools-Mark-split-kallsyms-DSOs-as-loaded.patch
 	patches.kernel.org/6.12.63-284-perf-tools-Fix-split-kallsyms-DSO-counting.patch
+	patches.kernel.org/6.12.63-285-perf-hist-In-init-ensure-mem_info-is-put-on-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
