--- a/series.conf
+++ b/series.conf
@@ -12625,6 +12625,7 @@
 	patches.kernel.org/6.12.63-023-objtool-Fix-standalone-hacks-jump_label.patch
 	patches.kernel.org/6.12.63-024-objtool-Fix-weak-symbol-detection.patch
 	patches.kernel.org/6.12.63-025-wifi-ath10k-Avoid-vdev-delete-timeout-when-fi.patch
+	patches.kernel.org/6.12.63-026-wifi-ath10k-Add-missing-include-of-export.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
