--- a/series.conf
+++ b/series.conf
@@ -12670,6 +12670,7 @@
 	patches.kernel.org/6.12.63-068-s390-smp-Fix-fallback-CPU-detection.patch
 	patches.kernel.org/6.12.63-069-s390-ap-Don-t-leak-debug-feature-files-if-AP-.patch
 	patches.kernel.org/6.12.63-070-arm64-dts-ti-k3-am62p-Fix-memory-ranges-for-G.patch
+	patches.kernel.org/6.12.63-071-firmware-imx-scu-irq-fix-OF-node-leak-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
