--- a/series.conf
+++ b/series.conf
@@ -12890,6 +12890,7 @@
 	patches.kernel.org/6.12.63-288-9p-fix-cache-debug-options-printing-in-v9fs_s.patch
 	patches.kernel.org/6.12.63-289-sched-fair-Fix-unfairness-caused-by-stalled-t.patch
 	patches.kernel.org/6.12.63-290-platform-x86-intel-pmc-Update-Arrow-Lake-tele.patch
+	patches.kernel.org/6.12.63-291-f2fs-keep-POSIX_FADV_NOREUSE-ranges.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
