--- a/series.conf
+++ b/series.conf
@@ -12611,6 +12611,7 @@
 	patches.kernel.org/6.12.63-009-accel-ivpu-Prevent-runtime-suspend-during-con.patch
 	patches.kernel.org/6.12.63-010-accel-ivpu-Ensure-rpm_runtime_put-in-case-of-.patch
 	patches.kernel.org/6.12.63-011-drm-panel-visionox-rm69299-Don-t-clear-all-mo.patch
+	patches.kernel.org/6.12.63-012-accel-ivpu-Make-function-parameter-names-cons.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
