--- a/series.conf
+++ b/series.conf
@@ -12905,6 +12905,7 @@
 	patches.kernel.org/6.12.63-303-NFS-Initialise-verifiers-for-visible-dentries.patch
 	patches.kernel.org/6.12.63-304-nfs-vfs-discard-d_exact_alias.patch
 	patches.kernel.org/6.12.63-305-NFS-Initialise-verifiers-for-visible-dentries.patch
+	patches.kernel.org/6.12.63-306-NFSv4-pNFS-Clear-NFS_INO_LAYOUTCOMMIT-in-pnfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
