--- a/series.conf
+++ b/series.conf
@@ -12651,6 +12651,7 @@
 	patches.kernel.org/6.12.63-049-block-mq-deadline-Switch-back-to-a-single-dis.patch
 	patches.kernel.org/6.12.63-050-arm64-dts-freescale-imx8mp-venice-gw7905-2x-r.patch
 	patches.kernel.org/6.12.63-051-arm64-dts-imx8mm-venice-gw72xx-remove-unused-.patch
+	patches.kernel.org/6.12.63-052-arm64-dts-imx8mp-venice-gw702x-remove-off-boa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
