block/blk-throttle: Fix throttle slice time for SSDs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12769,6 +12769,7 @@
 	patches.kernel.org/6.12.63-167-watchdog-starfive-Fix-resource-leak-in-probe-.patch
 	patches.kernel.org/6.12.63-168-tracefs-fix-a-leak-in-eventfs_create_events_d.patch
 	patches.kernel.org/6.12.63-169-NFSD-blocklayout-Fix-minlength-check-in-proc_.patch
+	patches.kernel.org/6.12.63-170-block-blk-throttle-Fix-throttle-slice-time-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
