perf record: skip synthesize event when open evsel failed (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12701,6 +12701,7 @@
 	patches.kernel.org/6.12.63-099-interconnect-debugfs-Fix-incorrect-error-hand.patch
 	patches.kernel.org/6.12.63-100-drm-imagination-Fix-reference-to-devm_platfor.patch
 	patches.kernel.org/6.12.63-101-perf-lock-contention-Load-kernel-map-before-l.patch
+	patches.kernel.org/6.12.63-102-perf-record-skip-synthesize-event-when-open-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
