efi/cper: Add a new helper function to print bitmasks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12937,6 +12937,7 @@
 	patches.kernel.org/6.12.63-335-block-return-unsigned-int-from-queue_dma_alig.patch
 	patches.kernel.org/6.12.63-336-dm-raid-fix-possible-NULL-dereference-with-un.patch
 	patches.kernel.org/6.12.63-337-dm-log-writes-Add-missing-set_freezable-for-f.patch
+	patches.kernel.org/6.12.63-338-efi-cper-Add-a-new-helper-function-to-print-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
