--- a/series.conf
+++ b/series.conf
@@ -12883,6 +12883,7 @@
 	patches.kernel.org/6.12.63-281-net-dsa-xrs700x-reject-unsupported-HSR-config.patch
 	patches.kernel.org/6.12.63-282-net-sched-sch_cake-Fix-incorrect-qlen-reducti.patch
 	patches.kernel.org/6.12.63-283-perf-tools-Mark-split-kallsyms-DSOs-as-loaded.patch
+	patches.kernel.org/6.12.63-284-perf-tools-Fix-split-kallsyms-DSO-counting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
