--- a/series.conf
+++ b/series.conf
@@ -12785,6 +12785,7 @@
 	patches.kernel.org/6.12.63-183-perf-arm-spe-Extend-branch-operations.patch
 	patches.kernel.org/6.12.63-184-perf-arm_spe-Fix-memset-subclass-in-operation.patch
 	patches.kernel.org/6.12.63-185-pwm-bcm2835-Make-sure-the-channel-is-enabled-.patch
+	patches.kernel.org/6.12.63-186-scsi-qla2xxx-Fix-improper-freeing-of-purex-it.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
