--- a/series.conf
+++ b/series.conf
@@ -12693,6 +12693,7 @@
 	patches.kernel.org/6.12.63-091-tools-nolibc-stdio-let-perror-work-when-NOLIB.patch
 	patches.kernel.org/6.12.63-092-soc-qcom-smem-fix-hwspinlock-resource-leak-in.patch
 	patches.kernel.org/6.12.63-093-pinctrl-stm32-fix-hwspinlock-resource-leak-in.patch
+	patches.kernel.org/6.12.63-094-i3c-fix-refcount-inconsistency-in-i3c_master_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
