--- a/series.conf
+++ b/series.conf
@@ -12747,6 +12747,7 @@
 	patches.kernel.org/6.12.63-145-coresight-Change-device-mode-to-atomic-type.patch
 	patches.kernel.org/6.12.63-146-coresight-etm4x-Correct-polling-IDLE-bit.patch
 	patches.kernel.org/6.12.63-147-coresight-etm4x-Extract-the-trace-unit-contro.patch
+	patches.kernel.org/6.12.63-148-coresight-etm4x-Add-context-synchronization-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
