--- a/series.conf
+++ b/series.conf
@@ -12738,6 +12738,7 @@
 	patches.kernel.org/6.12.63-136-ntfs3-init-run-lock-for-extend-inode.patch
 	patches.kernel.org/6.12.63-137-drm-panthor-Fix-potential-memleak-of-vma-stru.patch
 	patches.kernel.org/6.12.63-138-scsi-ufs-core-fix-incorrect-buffer-duplicatio.patch
+	patches.kernel.org/6.12.63-139-cpufreq-amd-pstate-Call-cppc_set_auto_sel-onl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
