--- a/series.conf
+++ b/series.conf
@@ -12808,6 +12808,7 @@
 	patches.kernel.org/6.12.63-206-selftests-bpf-skip-test_perf_branches_hw-on-u.patch
 	patches.kernel.org/6.12.63-207-selftests-bpf-Improve-reliability-of-test_per.patch
 	patches.kernel.org/6.12.63-208-crypto-starfive-Correctly-handle-return-of-sg.patch
+	patches.kernel.org/6.12.63-209-crypto-ccree-Correctly-handle-return-of-sg_ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
