--- a/series.conf
+++ b/series.conf
@@ -12682,6 +12682,7 @@
 	patches.kernel.org/6.12.63-080-ARM-dts-renesas-gose-Remove-superfluous-port-.patch
 	patches.kernel.org/6.12.63-081-ARM-dts-renesas-r9a06g032-rzn1d400-db-Drop-in.patch
 	patches.kernel.org/6.12.63-082-Revert-mtd-rawnand-marvell-fix-layouts.patch
+	patches.kernel.org/6.12.63-083-mtd-nand-relax-ECC-parameter-validation-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
