virtio: fix grammar in virtio_queue_info docs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12847,6 +12847,7 @@
 	patches.kernel.org/6.12.63-245-virtio_vdpa-fix-misleading-return-in-void-fun.patch
 	patches.kernel.org/6.12.63-246-virtio-fix-typo-in-virtio_device_ready-commen.patch
 	patches.kernel.org/6.12.63-247-virtio-fix-whitespace-in-virtio_config_ops.patch
+	patches.kernel.org/6.12.63-248-virtio-fix-grammar-in-virtio_queue_info-docs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
