smack: fix bug: setting task label silently ignores input garbage (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12606,6 +12606,7 @@
 	patches.kernel.org/6.12.63-004-smack-always-instantiate-inode-in-smack_inode.patch
 	patches.kernel.org/6.12.63-005-smack-fix-bug-invalid-label-of-unix-socket-fi.patch
 	patches.kernel.org/6.12.63-006-smack-fix-bug-unprivileged-task-can-create-la.patch
+	patches.kernel.org/6.12.63-007-smack-fix-bug-setting-task-label-silently-ign.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
