drm/panthor: Avoid adding of kernel BOs to extobj list (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12831,6 +12831,7 @@
 	patches.kernel.org/6.12.63-229-RDMA-irdma-Fix-data-race-in-irdma_sc_ccq_arm.patch
 	patches.kernel.org/6.12.63-230-RDMA-irdma-Fix-data-race-in-irdma_free_pble.patch
 	patches.kernel.org/6.12.63-231-RDMA-irdma-Do-not-directly-rely-on-IB_PD_UNSA.patch
+	patches.kernel.org/6.12.63-232-drm-panthor-Avoid-adding-of-kernel-BOs-to-ext.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
