virtio: fix whitespace in virtio_config_ops (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12846,6 +12846,7 @@
 	patches.kernel.org/6.12.63-244-of-Skip-devicetree-kunit-tests-when-RISCV-ACP.patch
 	patches.kernel.org/6.12.63-245-virtio_vdpa-fix-misleading-return-in-void-fun.patch
 	patches.kernel.org/6.12.63-246-virtio-fix-typo-in-virtio_device_ready-commen.patch
+	patches.kernel.org/6.12.63-247-virtio-fix-whitespace-in-virtio_config_ops.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
