bpf: Refactor stack map trace depth calculation into helper function (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12685,6 +12685,7 @@
 	patches.kernel.org/6.12.63-083-mtd-nand-relax-ECC-parameter-validation-check.patch
 	patches.kernel.org/6.12.63-084-mtd-rawnand-lpc32xx_slc-fix-GPIO-descriptor-l.patch
 	patches.kernel.org/6.12.63-085-perf-Remove-get_perf_callchain-init_nr-argume.patch
+	patches.kernel.org/6.12.63-086-bpf-Refactor-stack-map-trace-depth-calculatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
