tracefs: fix a leak in eventfs_create_events_dir() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12767,6 +12767,7 @@
 	patches.kernel.org/6.12.63-165-bpf-Check-skb-transport_header-is-set-in-bpf_.patch
 	patches.kernel.org/6.12.63-166-watchdog-wdat_wdt-Fix-ACPI-table-leak-in-prob.patch
 	patches.kernel.org/6.12.63-167-watchdog-starfive-Fix-resource-leak-in-probe-.patch
+	patches.kernel.org/6.12.63-168-tracefs-fix-a-leak-in-eventfs_create_events_d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
