resource: introduce is_type_match() helper and use it (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12860,6 +12860,7 @@
 	patches.kernel.org/6.12.63-258-ARM-dts-samsung-exynos4412-midas-turn-off-SDI.patch
 	patches.kernel.org/6.12.63-259-regulator-core-Protect-regulator_supply_alias.patch
 	patches.kernel.org/6.12.63-260-resource-replace-open-coded-resource_intersec.patch
+	patches.kernel.org/6.12.63-261-resource-introduce-is_type_match-helper-and-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
